--- a/src/app/components/buy/buy.component.html
+++ b/src/app/components/buy/buy.component.html
@@ -1,5 +1,19 @@
 <app-navbar></app-navbar>
 
-<p>
-  buy works!
-</p>
+<div class="lBoxContainer">
+  <div class="lBoxContainer__coins">
+    <div class="lBoxCard">
+      <div class="lBoxCard__inner">
+        <div class="lBoxCard__header">
+          
+        </div>
+        <div class="lBoxCard__body lBoxCard__body--raoninos">
+          
+        </div>  
+        <div class="lBoxCard__buyBtn">
+          
+        </div>   
+      </div> 
+    </div>
+  </div>
+</div>
