--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,10 @@
 <app-navbar></app-navbar>
-
-<p>
-  home works!
-</p>
+<div class="lBoxContainer">
+    <div class="lBoxContainer">
+      <div class="lBoxContainer__boxes">
+        <app-low></app-low>
+        <app-medium></app-medium>
+        <app-low></app-low>        
+      </div>
+  </div>
+</div>
