--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,3 +1,13 @@
-<p>
-  navbar works!
-</p>
+<div class="lboxNavigation">
+  <div class="lboxNavigation__inner">
+    <div class="lboxNavigation__user">
+      <img src="#" />
+    </div>
+    <div class="lboxNavigation__logo">
+      <img src="#" />      
+    </div>
+    <div class="lboxNavigation__raoninos">
+      <a href="#">0 R</a>
+    </div>
+  </div>
+</div>
