--- a/src/app/components/boxes/low/low.component.html
+++ b/src/app/components/boxes/low/low.component.html
@@ -1,3 +1,13 @@
-<p>
-  low works!
-</p>
+<div class="lBoxCard">
+  <div class="lBoxCard__inner">
+    <div class="lBoxCard__header">
+      
+    </div>
+    <div class="lBoxCard__body lBoxCard__body--low">
+      
+    </div>  
+    <div class="lBoxCard__buyBtn">
+      
+    </div>   
+  </div> 
+</div>
