Reestructuración del proyecto

--- a/src/app/components/buy/buy.component.html
+++ b/src/app/components/buy/buy.component.html
@@ -1,5 +1,3 @@
-<app-navbar></app-navbar>
-
 <div class="lBoxContainer">
   <div class="lBoxContainer__coins">
     <div class="lBoxCard">
@@ -11,7 +9,8 @@
           
         </div>  
         <div class="lBoxCard__buyBtn">
-          
+          <!-- el boton debe tener el siguiente código (click)="buy(valor_de_la_compra)" -->
+          <button (click)="buy()">Comprar</button>
         </div>   
       </div> 
     </div>
