--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,13 +1,10 @@
 <div class="lboxNavigation">
   <div class="lboxNavigation__inner">
     <div class="lboxNavigation__user">
-      <img src="#" />
+      <img src="#" (click)="goTo('home')"/>
     </div>
     <div class="lboxNavigation__logo">
-      <img src="#" />      
-    </div>
-    <div class="lboxNavigation__raoninos">
-      <a href="#">0 R</a>
+      <img src="#" (click)="goTo('faq')"/>      
     </div>
   </div>
 </div>
