Cambios Listos para maquetar

--- a/src/app/components/boxes/hight/hight.component.html
+++ b/src/app/components/boxes/hight/hight.component.html
@@ -7,9 +7,7 @@
             
           </div>  
           <div class="lBoxCard__buyBtn">
-            
+              <button (click)="buyHight(10000)">Buy</button>
           </div>   
         </div> 
       </div>
-
-BOX HIGHT
