--- a/src/app/components/boxes/low/low.component.html
+++ b/src/app/components/boxes/low/low.component.html
@@ -7,9 +7,7 @@
       
     </div>  
     <div class="lBoxCard__buyBtn">
-      
+        <button (click)="buyLow(1000)">Buy</button>      
     </div>   
   </div> 
 </div>
-
-BOX BARATA
