--- a/src/app/components/boxes/medium/medium.component.html
+++ b/src/app/components/boxes/medium/medium.component.html
@@ -7,9 +7,7 @@
       
     </div>  
     <div class="lBoxCard__buyBtn">
-      
+        <button (click)="buyMedium(5000)">Buy</button>
     </div>   
   </div> 
 </div>
-
-BOX MEDIUM
