Ahora los Raoninos en la Home se actualizan mediante un service

--- a/src/app/components/buy/buy.component.html
+++ b/src/app/components/buy/buy.component.html
@@ -1,5 +1,5 @@
 <!-- VISTA PARA COMPRAR DINERO -->
-<div class="lBoxContainer" *ngIf="!comprar">
+<div class="lBoxContainer">
     <div class="lBoxContainer__coins">
       <div class="lBoxCard">
         <div class="lBoxCard__inner">
