--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -2,8 +2,12 @@
 
 <h4>FAQ</h4>
 
-<p>¿Cómo realizar un routing desde una función? -> https://stackoverflow.com/questions/40544937/angular-2-generate-the-route-link-using-functions-dynamically-generate-the-rou</p>
 
-<p>Documentación Angular CLI -></p>
+<ul>
+    <li><a href="https://cli.angular.io/" target="_blank">Documentación Angular CLI</a></li>
+    <li><a href="https://angular.io/" target="_blank">Documentación Angular</a></li>
+    <li><a href="https://stackoverflow.com/questions/40544937/angular-2-generate-the-route-link-using-functions-dynamically-generate-the-rou" target="_blank">¿Cómo realizar un routing desde una función?</a></li>
+    <li><a href="https://scotch.io/tutorials/the-many-ways-to-use-ngclass" target="_blank">Uso de la directiva NgClass</a></li>
+    <li><a href="https://angularfirebase.com/lessons/sharing-data-between-angular-components-four-methods/">Pasar parametros entre componentes y vistas</a></li>
+</ul>
 
-<p>Documentación Angular -></p>
