--- a/src/styles.css
+++ b/src/styles.css
@@ -120,10 +120,24 @@ p {
   height: 80px;
 }
 
+.lBoxCard__buyBtn {
+  border: none;
+  background-color: #FFB800;
+  padding: 10px 15px;
+  color: #fff;
+}
+
+.lBoxCard__buyBtn--disable {
+  pointer-events: none;
+  background-color: #888888;
+}
+
 .lBoxModal {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  position: relative;
+  top: auto;
+  right: auto;
+  bottom: auto;
+  left: auto;
+  z-index: 1;
+  display: block;
 }
